<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vehicles"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/my_vehicles"/>

        <item
            android:id="@+id/nav_records"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/records"/>

        <item
            android:id="@+id/nav_summary"
            android:icon="@android:drawable/ic_menu_report_image"
            android:title="@string/summary"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>